--- a/mysite/blog/templates/blog/post_detail.html
+++ b/mysite/blog/templates/blog/post_detail.html
@@ -11,11 +11,29 @@
                 <img class="img-fluid mr-md-auto" alt="{{post.slug}}" src="{{post.imagen}}"> <!--img-fluid imagen inicio de post(responsive a su contenedor)-->
             </div>
             <div class="col-md-9">
-                <h2> {{post.titulo}}</a><br><span class="fecha-p"><i class="far fa-calendar-alt"></i> {{post.creacion_en|date}}</span></h2>
-                <p>{{post.descripcion}}</p>
-                <span style="font-size:0;">{% for categoria in post.categoria.all %} {{ categoria }}{% endfor %}</span>
+                <div class="position-relative">
+                    <div class="row">
+                        <div class="col-12 col-sm-8">
+                            <h2> {{post.titulo}}</a><br><span class="fecha-p"><i class="far fa-calendar-alt"></i> {{post.creacion_en|date:'d N Y'}}</span></h2>
+                        </div>
+                        <div class="col-12 col-sm-4">
+                            <div class="badges-container">
+                                {% for categoria in post.categoria.all %}
+                                <span  class="badge badge-categoria"> {{categoria}} </span>
+                                {% endfor %}
+                            </div>
+                        </div>
+                    </div>
+                    <p>{{post.descripcion}}</p>
+                    
+                </div>
             </div>
-            <div class="col-12">{{post.contenido|safe}}</div>
+            <div class="col-12">
+                {% for tag in post.tags.all %}
+                    <span style="font-size:0;" class="badge badge-tag"> {{tag}} </span>
+                {% endfor %}
+                {{post.contenido|safe}}
+            </div>
         </div>
     </div>
     <div class=row>
@@ -26,6 +44,12 @@
             <form method="POST">
                 {% csrf_token %}
                 {% if error_message %}<p><strong>{{ error_message }}</strong></p>{% endif %}
+                <div class="form-group row">
+                    <label class="col-lg-2 col-form-label px-1">Nombre:</label>
+                    <div class="col-lg-10 pt-1">
+                        <input  type="text" class="form-control" name="autor_comentario" id="autor_comentario" placeholder="Ingresa tu nombre"/>                    
+                    </div>
+                </div>
                 <div class="form-group row">
                     <label  class="col-lg-2 col-form-label px-1">Que opinas de este post:</label>
                     <div class="col-lg-10 pt-1">
@@ -40,9 +64,21 @@
             </form>
             
             <div name="lista_comentarios">
-                {% for comentario in comentarios_post %}
-            <p> {{ comentario.contenido }} </p>
-            {% endfor %}
+                
+                <div class="container">
+                    <div class="row">
+                        {% for comentario in comentarios_post %}
+                            <div class="col-md-2 my-3">
+                                <span class="fas fa-user fa-5x mr-3 "></span>
+                            </div>
+                            <div class="col-md-10 mx-auto px-4">
+                                <h5 class="mt-3">{{comentario.nombre}}</h5>
+                                {{comentario.contenido}}
+                            </div>
+                            
+                        {% endfor %}
+                    </div>
+                </div>
             </div>
         </div>
     </div>
@@ -58,15 +94,19 @@
 </div>
 
 {% for post in blog_list %}
-    <div class="hero-post-l shadow-pre rounded my-md-4"> <!--Post -->
+    <div class="position-relative shadow-pre rounded my-md-4"> <!--Post -->
         <div class="row">
             <div class="col-md-3">
                 <img class="img-fluid mr-md-auto" alt="{{post.slug}}" src="{{post.imagen}}"> <!--img-fluid imagen inicio de post(responsive a su contenedor)-->
             </div>
             <div class="col-md-9">
-                <h2><a class="post-link" href="{% url 'blog:post_detail' post.slug %}"> {{post.titulo}}</a><br><span class="fecha-p"><i class="far fa-calendar-alt"></i> {{post.creacion_en|date}}</span></h2>
+                <h2><a class="post-link" href="{% url 'blog:post_detail' post.slug %}"> {{post.titulo}}</a><br><span class="fecha-p"><i class="far fa-calendar-alt"></i> {{post.creacion_en|date:'d N Y'}}</span></h2>
+                <div class="badges-container">
+                    {% for categoria in post.categoria.all %}
+                    <span  class="badge badge-categoria"> {{categoria}} </span>
+                    {% endfor %}
+                </div>
                 <p>{{post.descripcion}}</p> 
-                <span style="font-size:0;">{% for categoria in post.categoria.all %} {{ categoria }}{% endfor %}</span>
             </div>
         </div>
     </div>
